name:                mq
version:             0.1.0.0
synopsis:            Package with monique core
description:
  The package covers:
  .
    * protocol module
  .
    * scheduler module

homepage:            https://github.com/biocad/mq
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii, Vladimir Morozov, Sofya Kochkova, Alexander Sadovnikov
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2018, BIOCAD
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
  other-modules:       
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -O2
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/biocad/mq
